--- a/apps/correspondences/templates/correspondences/correspondence_create.html
+++ b/apps/correspondences/templates/correspondences/correspondence_create.html
@@ -1,24 +1,24 @@
 {% extends "core/base.html" %}
 {% load static %}
+
 {% block extra_css %}
-<link rel="stylesheet" href="{% static 'css/plasmids.css' %}">
+<link rel="stylesheet" href="{% static 'css/correspondences.css' %}">
 {% endblock %}
 
 {% block content %}
-
-<h1>Create New correspondence</h1>
-<br>
-<form method="post">
-  {% csrf_token %}
-  <table class="form-table">
-        {{ form.as_table }}
-  </table>
-  <br>
-  <div class="form-actions">
-        <button type="submit" class="btn">
-            Save Correspondence
-        </button>
-</form>
-
-<p><a href="{% url 'correspondences:list' %}">← Back to list</a></p>
+<div class="card">
+  <h1 class="page-title">Create New Correspondence</h1>
+  
+  <form method="post" class="form-block">
+    {% csrf_token %}
+    <table class="form-table">
+      {{ form.as_table }}
+    </table>
+  
+    <div class="form-actions">
+      <button type="submit" class="btn">Save Correspondence</button>
+      <a class="btn btn-secondary" href="{% url 'correspondences:list' %}">Cancel</a>
+    </div>
+  </form>
+</div>
 {% endblock %}
