ajout import plasmides

--- a/apps/core/templates/core/home.html
+++ b/apps/core/templates/core/home.html
@@ -40,6 +40,11 @@
             Plasmid collections
           </a>
         </li>
+        <li>
+          <a href="{% url 'plasmids:plasmid_import' %}">Import plasmids</a>
+          </a>
+        </li>
+        
       </ul>
     </section>
     
@@ -47,7 +52,7 @@
     <section class="card">
       <h2 class="card-title">Correspondences</h2>
       <ul class="card-list">
-        <li><a href="{% url 'correspondences:list' %}">My correspondences</a></li>
+        <li><a href="{% url 'correspondences:list' %}">Correspondences tables</a></li>
       </ul>
     </section>
 
