--- a/apps/plasmids/templates/plasmids/plasmid_detail.html
+++ b/apps/plasmids/templates/plasmids/plasmid_detail.html
@@ -12,7 +12,7 @@
 <!-- Header -->
 <div class="plasmid-header">
     <div style="display:flex; justify-content:space-between; align-items:center;">
-        <h1>{{ plasmid.identifier }}</h1>
+        <h1>{{ plasmid.name|default:plasmid.identifier }}</h1>
         <a class="btn" href="{% if request.META.HTTP_REFERER %}{{ request.META.HTTP_REFERER }}{% else %}{% url 'plasmid_list' %}{% endif %}">
             Back
         </a>    
@@ -30,8 +30,10 @@
     </h2>
 
     <div class="card-content">
-        <p><strong>Length:</strong> {{ parsed.length }} bp</p>
-        <p><strong>Collection:</strong> {{ plasmid.collection }}</p>
+        <p><strong>Identifier :</strong> {{ plasmid.identifier }}</p>
+
+        <p><strong>Length :</strong> {{ parsed.length }} bp</p>
+        <p><strong>Collection :</strong> {{ plasmid.collection }}</p>
     </div>
 </div>
 
